tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_normal_generic_as_array_length/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Type provided when a numeric generic was expected
  ┌─ src/main.nr:4:12
  │
4 │         b: [Field; N],
  │            ---------- the numeric generic is not of type `u32`
  │

Aborting due to 1 previous error
